Add unit tests for EnrollmentService, AuthService, CourseService, and NotificationService; refactor exception handling